wp/web-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deploy
  labels:
    app: wp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wp
  template:
    metadata:
      labels:
        app: wp
    spec:
      containers:
      - name: wp
        image: wordpress
        ports:
        - containerPort: 80
